--- a/safpy-env.yml
+++ b/safpy-env.yml
@@ -28,6 +28,6 @@ dependencies:
       - idna==3.7
       - packaging==23.2
       - py-solc-x==2.0.2
-      - python-graphviz==0.20.3
+      - graphviz==0.20.3
       - requests==2.31.0
       - urllib3==2.2.1
