--- a/safpy-env.yml
+++ b/safpy-env.yml
@@ -1,17 +1,19 @@
 name: safpy
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
-  - ca-certificates=2024.3.11=h06a4308_0
+  - ca-certificates=2024.6.2=hbcca054_0
   - ld_impl_linux-64=2.38=h1181459_1
   - libffi=3.4.4=h6a678d5_1
+  - libgcc=7.2.0=h69d50b8_2
   - libgcc-ng=11.2.0=h1234567_1
   - libgomp=11.2.0=h1234567_1
-  - libstdcxx-ng=11.2.0=h1234567_1
+  - libstdcxx-ng=13.2.0=hc0a3c3a_7
   - ncurses=6.4=h6a678d5_0
-  - openssl=3.0.13=h7f8727e_1
+  - openssl=3.0.14=h5eee18b_0
   - pip=23.3.1=py39h06a4308_0
   - python=3.9.19=h955ad1f_1
   - readline=8.2=h5eee18b_0
@@ -26,8 +28,9 @@ dependencies:
       - certifi==2024.2.2
       - charset-normalizer==3.3.2
       - idna==3.7
+      - jpype1==1.5.0
       - packaging==23.2
       - py-solc-x==2.0.2
-      - graphviz==0.20.3
+      - python-graphviz==0.20.3
       - requests==2.31.0
       - urllib3==2.2.1
